hard-gists/f7d8b6cb045cbb65ab80/run.log
=== Docker Run Log for f7d8b6cb045cbb65ab80 ===
Started at: Mi 29. Okt 21:29:25 CET 2025

[2025-10-29 21:29:25] START: Running container for f7d8b6cb045cbb65ab80
[2025-10-29 21:29:26] SUCCESS: Container 9fece7fa3bdaa196398c0b6feddb34d1ca375ea832f811939a32e467bf13e920 started for f7d8b6cb045cbb65ab80
=== Container logs for f7d8b6cb045cbb65ab80 ===
  File "/snippet.py", line 38
    print s.readuntil('?')
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f7d8b6cb045cbb65ab80 ===
[2025-10-29 21:29:28] INFO: Container 9fece7fa3bdaa196398c0b6feddb34d1ca375ea832f811939a32e467bf13e920 has stopped
